--- a/src/components/home.scss
+++ b/src/components/home.scss
@@ -9,18 +9,21 @@
  
 
   .card-name {
-    border: solid 6px $onyx;
-    margin-top: 10rem;
+    border: solid 6px lightgray;
+    margin-top: 11rem;
     word-wrap: normal;
+    background-color: $onyx;
 
     hr {
-      border-color: $onyx;
+      border: none;
+      height: 2px;
+      background-color: $rosegold;
     }
     
 
     .name {
       margin-top: 2.3rem;
-      color: $rosegold;
+      color: lightgray;
 
       .first{
         margin: 0;
@@ -45,6 +48,7 @@
       }
     }
     @media screen and (max-width: 767.98px) {
+
       .name{
         padding: 0;
         margin: 0;
@@ -56,11 +60,10 @@
 
     }
 
-    @media screen and (max-width: 575.98px){     
-      
+    @media screen and (max-width: 575.98px){      
       max-width: 100%;
       height: 60px;
-      margin-top: 0;
+      margin-top: 65px;
 
       hr, br {
         display: none;
@@ -98,8 +101,8 @@
     }
 
     @media screen and (max-width: 575.98px){
-      margin: 2.8em 0 1.0em 0;
-      order: 2;
+      margin: 0;
+      
      }
   }
 
@@ -134,7 +137,9 @@
     }
 
     hr {
-      border-color: $rosegold;
+      border: none;
+      height: 2px;
+      background-color: $rosegold;
       margin: 0 1.0em;
     }
 
