--- a/src/components/projects.scss
+++ b/src/components/projects.scss
@@ -1,10 +1,10 @@
 @import '../App.scss';
 
 #projects{
-  min-height: 676px;
+  min-height: 700px;
   background-color: $onyx;
   display: block;
-
+  
 
   .project {
     background-color: $onyx;
@@ -36,8 +36,8 @@
 
     @media screen and (max-width: 767.98px) {
       .projects-title {
-        margin-top: 60px;
         margin-bottom: 0;
+      
         h3 {
         font-size: 1.2rem; 
         }
@@ -45,6 +45,12 @@
           font-size: .90rem;
         }
       }
+    }
+    @media screen and (max-width: 575.98px) {
+      .projects-title {
+        margin-top: 65px;
+      }
+    
     }
 
   }
@@ -96,8 +102,13 @@
   
 
 
-  .card-columns{
+  .project-cards {
     margin-top: 4rem;
+
+    @media screen and (max-width: 575.98px) {    
+        margin-top: 1rem;
+
+    }
     
     .project-1 {
       background-image: url(./../../src/images/bw_ladybug_game.jpg);
